fix paragraph on mobile

--- a/css/site.css
+++ b/css/site.css
@@ -538,9 +538,14 @@ footer {
     object-fit: cover; 
   }
 
-  .text {
+  .container.row-reverse div.text {
+    min-width: 100%;
     width: 100%;
-    padding: 20px;
+  }
+
+  .container.row div.text {
+    min-width: 100%;
+    width: 100%;
   }
 
   span {
